--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "clean": "rimraf dist node_modules"
   },
   "devDependencies": {
+    "@astrojs/image": "^0.4.0",
     "@astrojs/tailwind": "^1.0.0",
     "@types/micromodal": "^0.3.3",
     "astro": "^1.1.3",
-    "astro-eleventy-img": "^0.5.0",
     "astro-icon": "^0.7.3",
     "prettier": "2.7.1",
     "prettier-plugin-astro": "^0.5.0",
