Add sharp to fix @astrojs/image

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "tailwindcss-fluid-type": "^2.0.3"
   },
   "dependencies": {
-    "micromodal": "^0.4.10"
+    "micromodal": "^0.4.10",
+    "sharp": "^0.31.2"
   }
 }
