--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@types/micromodal": "^0.3.3",
     "astro": "^1.6.10",
     "astro-compress": "^2.0.15",
-    "astro-icon": "^0.8.0",
+    "astro-icon": "^0.8.1",
     "prettier": "2.7.1",
     "prettier-plugin-astro": "^0.7.0",
     "rimraf": "^3.0.2",
+    "svgo": "^2.8.0",
     "tailwindcss-fluid-type": "^2.0.3"
   },
   "dependencies": {
